--- a/OwnVST3Host/OwnVST3Host.csproj
+++ b/OwnVST3Host/OwnVST3Host.csproj
@@ -3,24 +3,65 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>  
+    <Nullable>enable</Nullable>
 
-	<!-- NuGet csomagolási információk -->
-	<PackageId>OwnVst3Host</PackageId>
-	<Version>1.0.2</Version>
-	<Authors>Modern Mube</Authors>
-	<Company>Modern Musician</Company>
-	<Description>C# wrapper for the OwnVst3 native library to work with VST3 plugins</Description>
-	<PackageTags>vst;vst3;audio;plugin;wrapper</PackageTags>
-	<PackageLicenseExpression>MIT</PackageLicenseExpression>
-	<PackageReadmeFile>README.md</PackageReadmeFile>
-	<RepositoryUrl>https://github.com/ModernMube/OwnVST3Sharp</RepositoryUrl>
-	<PackageIcon>icon.png</PackageIcon>
+    <!-- NuGet csomagolási információk -->
+    <PackageId>OwnVst3Host</PackageId>
+    <Version>1.0.3</Version>
+    <Authors>Modern Mube</Authors>
+    <Company>Modern Musician</Company>
+    <Description>C# wrapper for the OwnVst3 native library to work with VST3 plugins</Description>
+    <PackageTags>vst;vst3;audio;plugin;wrapper</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/ModernMube/OwnVST3Sharp</RepositoryUrl>
+    <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
 
-	<ItemGroup>
-		<None Include="README.md" Pack="true" PackagePath="\" />
-		<None Include="icon.png" Pack="true" PackagePath="\" />
-	</ItemGroup>
-	
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="icon.png" Pack="true" PackagePath="\" />
+  </ItemGroup>
+
+  <!-- Native libraries for NuGet package -->
+  <ItemGroup>
+    <!-- Windows x64 -->
+    <None Include="..\runtimes\win-x64\native\ownvst3.dll"
+          Pack="true"
+          PackagePath="runtimes\win-x64\native"
+          Condition="Exists('..\runtimes\win-x64\native\ownvst3.dll')" />
+
+    <!-- Windows x86 -->
+    <None Include="..\runtimes\win-x86\native\ownvst3.dll"
+          Pack="true"
+          PackagePath="runtimes\win-x86\native"
+          Condition="Exists('..\runtimes\win-x86\native\ownvst3.dll')" />
+
+    <!-- Linux x64 -->
+    <None Include="..\runtimes\linux-x64\native\libownvst3.so"
+          Pack="true"
+          PackagePath="runtimes\linux-x64\native"
+          Condition="Exists('..\runtimes\linux-x64\native\libownvst3.so')" />
+
+    <!-- macOS x64 -->
+    <None Include="..\runtimes\osx-x64\native\libownvst3.dylib"
+          Pack="true"
+          PackagePath="runtimes\osx-x64\native"
+          Condition="Exists('..\runtimes\osx-x64\native\libownvst3.dylib')" />
+
+    <!-- macOS ARM64 -->
+    <None Include="..\runtimes\osx-arm64\native\libownvst3.dylib"
+          Pack="true"
+          PackagePath="runtimes\osx-arm64\native"
+          Condition="Exists('..\runtimes\osx-arm64\native\libownvst3.dylib')" />
+  </ItemGroup>
+
+  <!-- Copy native libraries to output directory when building -->
+  <ItemGroup>
+    <None Include="..\runtimes\**\*"
+          CopyToOutputDirectory="PreserveNewest"
+          LinkBase="runtimes"
+          Condition="Exists('..\runtimes')" />
+  </ItemGroup>
+
 </Project>
