--- a/OwnVST3Sharp.csproj
+++ b/OwnVST3Sharp.csproj
@@ -2,22 +2,50 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <!-- Exclude OwnVST3Host folder - it's compiled as a separate project -->
   <ItemGroup>
-    <Folder Include="Library\" />
+    <Compile Remove="OwnVST3Host\**" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="OwnVST3Host\OwnVST3Host.csproj" />
   </ItemGroup>
 
+  <!-- Native libraries for different platforms -->
   <ItemGroup>
-    <None Update="Library\ownvst3.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <!-- Windows x64 -->
+    <None Include="runtimes\win-x64\native\ownvst3.dll" Condition="Exists('runtimes\win-x64\native\ownvst3.dll')">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Link>runtimes\win-x64\native\ownvst3.dll</Link>
+    </None>
+
+    <!-- Windows x86 -->
+    <None Include="runtimes\win-x86\native\ownvst3.dll" Condition="Exists('runtimes\win-x86\native\ownvst3.dll')">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Link>runtimes\win-x86\native\ownvst3.dll</Link>
+    </None>
+
+    <!-- Linux x64 -->
+    <None Include="runtimes\linux-x64\native\libownvst3.so" Condition="Exists('runtimes\linux-x64\native\libownvst3.so')">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Link>runtimes\linux-x64\native\libownvst3.so</Link>
+    </None>
+
+    <!-- macOS x64 -->
+    <None Include="runtimes\osx-x64\native\libownvst3.dylib" Condition="Exists('runtimes\osx-x64\native\libownvst3.dylib')">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Link>runtimes\osx-x64\native\libownvst3.dylib</Link>
+    </None>
+
+    <!-- macOS ARM64 -->
+    <None Include="runtimes\osx-arm64\native\libownvst3.dylib" Condition="Exists('runtimes\osx-arm64\native\libownvst3.dylib')">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Link>runtimes\osx-arm64\native\libownvst3.dylib</Link>
     </None>
   </ItemGroup>
 
