--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "OwnVST3"]
 	path = OwnVST3
-	url = https://github.com/YOUR_USERNAME/OwnVST3.git
+	url = https://github.com/ModernMube/OwnVST3.git
