--- a/OwnVST3EtoDemo/OwnVST3EtoDemo.csproj
+++ b/OwnVST3EtoDemo/OwnVST3EtoDemo.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Eto.Forms" Version="2.10.2" />
-    <PackageReference Include="Eto.Platform.Windows" Version="2.10.2" />
+    <PackageReference Include="Eto.Platform.Wpf" Version="2.10.2" />
   </ItemGroup>
 
   <ItemGroup>
