--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ bld/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 .idea/
+.DS_Store
+Thumbs.db
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
