ci: Add ARM64 X11 libraries for Linux ARM64 cross-compile
- Enable arm64 architecture with dpkg
- Install libx11-dev:arm64 for cross-compilation
- Fixes CMake error: Could NOT find X11 on ARM64 builds

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,7 +81,9 @@ jobs:
       - name: Install Linux ARM64 cross-compiler
         if: matrix.rid == 'linux-arm64'
         run: |
-          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+          sudo dpkg --add-architecture arm64
+          sudo apt-get update
+          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu libx11-dev:arm64
           echo "CC=aarch64-linux-gnu-gcc" >> $GITHUB_ENV
           echo "CXX=aarch64-linux-gnu-g++" >> $GITHUB_ENV
 
