revert: Restore Avalonia embedding (revert to state of v1.3.8)
User requested to revert to the Avalonia-based version as the native window implementation had issues.
Restores:
- NativeControlHost inheritance in VstEditorHost
- Old OwnVst3Wrapper API (CreateEditor)
- Submodule OwnVST3 to 09be937 (Native macOS pumping but older windowing)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,7 +75,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential cmake libx11-dev
+          sudo apt-get install -y build-essential cmake
 
       # Install cross-compile tools for Linux ARM64
       - name: Install Linux ARM64 cross-compiler
