--- a/OwnVST3Host/OwnVST3Host.csproj
+++ b/OwnVST3Host/OwnVST3Host.csproj
@@ -4,19 +4,28 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 
-    <!-- NuGet csomagolási információk -->
-    <PackageId>OwnVst3Host</PackageId>
-    <Version>1.1.0</Version>
+    <!-- NuGet packaging information -->
+    <PackageId>OwnAudioVst</PackageId>
+    <Version>1.3.9</Version>
     <Authors>Modern Mube</Authors>
     <Company>Modern Musician</Company>
-    <Description>C# wrapper for the OwnVst3 native library to work with VST3 plugins</Description>
-    <PackageTags>vst;vst3;audio;plugin;wrapper</PackageTags>
+    <Description>C# wrapper for the OwnVst3 native library to work with VST3 plugins. Includes cross-platform editor support using Avalonia UI.</Description>
+    <PackageTags>vst;vst3;audio;plugin;wrapper;editor;avalonia;cross-platform</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <RepositoryUrl>https://github.com/ModernMube/OwnVST3Sharp</RepositoryUrl>
+    <RepositoryUrl>https://github.com/ModernMube/OwnAudioVST3</RepositoryUrl>
     <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
+
+  <!-- Avalonia packages for cross-platform editor support -->
+  <ItemGroup>
+    <PackageReference Include="Avalonia" Version="11.3.11" />
+    <PackageReference Include="Avalonia.Desktop" Version="11.3.11" />
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.11" />
+    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.11" />
+  </ItemGroup>
 
   <ItemGroup>
     <None Include="README.md" Pack="true" PackagePath="\" />
@@ -37,11 +46,29 @@
           PackagePath="runtimes\win-x86\native"
           Condition="Exists('..\runtimes\win-x86\native\ownvst3.dll')" />
 
+    <!-- Windows ARM64 -->
+    <None Include="..\runtimes\win-arm64\native\ownvst3.dll"
+          Pack="true"
+          PackagePath="runtimes\win-arm64\native"
+          Condition="Exists('..\runtimes\win-arm64\native\ownvst3.dll')" />
+
     <!-- Linux x64 -->
     <None Include="..\runtimes\linux-x64\native\libownvst3.so"
           Pack="true"
           PackagePath="runtimes\linux-x64\native"
           Condition="Exists('..\runtimes\linux-x64\native\libownvst3.so')" />
+
+    <!-- Linux ARM64 -->
+    <None Include="..\runtimes\linux-arm64\native\libownvst3.so"
+          Pack="true"
+          PackagePath="runtimes\linux-arm64\native"
+          Condition="Exists('..\runtimes\linux-arm64\native\libownvst3.so')" />
+
+    <!-- macOS Universal -->
+    <None Include="..\runtimes\osx\native\libownvst3.dylib"
+          Pack="true"
+          PackagePath="runtimes\osx\native"
+          Condition="Exists('..\runtimes\osx\native\libownvst3.dylib')" />
 
     <!-- macOS x64 -->
     <None Include="..\runtimes\osx-x64\native\libownvst3.dylib"
