--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -215,6 +215,83 @@ jobs:
           retention-days: 30
 
   # ============================================
+  # Update Native Libraries in Repository
+  # ============================================
+  update-native-libs:
+    if: github.event_name == 'push' && !contains(github.event.head_commit.message, '[skip ci]')
+    needs: build-native
+    runs-on: ubuntu-latest
+    name: Update Native Libraries
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          ref: ${{ github.ref }}
+
+      # Download all native artifacts
+      - name: Download Windows x64 native
+        uses: actions/download-artifact@v4
+        with:
+          name: native-win-x64
+          path: runtimes/win-x64/native/
+
+      - name: Download Windows x86 native
+        uses: actions/download-artifact@v4
+        with:
+          name: native-win-x86
+          path: runtimes/win-x86/native/
+        continue-on-error: true
+
+      - name: Download Windows ARM64 native
+        uses: actions/download-artifact@v4
+        with:
+          name: native-win-arm64
+          path: runtimes/win-arm64/native/
+        continue-on-error: true
+
+      - name: Download macOS native
+        uses: actions/download-artifact@v4
+        with:
+          name: native-osx-universal
+          path: runtimes/osx/native/
+
+      - name: Download Linux x64 native
+        uses: actions/download-artifact@v4
+        with:
+          name: native-linux-x64
+          path: runtimes/linux-x64/native/
+
+      - name: Download Linux ARM64 native
+        uses: actions/download-artifact@v4
+        with:
+          name: native-linux-arm64
+          path: runtimes/linux-arm64/native/
+        continue-on-error: true
+
+      # Copy macOS universal to both arch folders
+      - name: Setup macOS runtime folders
+        run: |
+          mkdir -p runtimes/osx-x64/native/
+          mkdir -p runtimes/osx-arm64/native/
+          cp runtimes/osx/native/* runtimes/osx-x64/native/ || true
+          cp runtimes/osx/native/* runtimes/osx-arm64/native/ || true
+
+      # Commit and push changes
+      - name: Commit updated native libraries
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add runtimes/
+          if git diff --cached --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "chore: Update native libraries [skip ci]"
+            git push
+          fi
+
+  # ============================================
   # Create Release (on tag push)
   # ============================================
   release:
