fix: Add write permissions to update-native-libs job

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -222,6 +222,8 @@ jobs:
     needs: build-native
     runs-on: ubuntu-latest
     name: Update Native Libraries
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout repository
