--- a/OwnVST3Host/OwnVST3Host.csproj
+++ b/OwnVST3Host/OwnVST3Host.csproj
@@ -11,21 +11,13 @@
     <Version>1.3.9</Version>
     <Authors>Modern Mube</Authors>
     <Company>Modern Musician</Company>
-    <Description>C# wrapper for the OwnVst3 native library to work with VST3 plugins. Includes cross-platform editor support using Avalonia UI.</Description>
-    <PackageTags>vst;vst3;audio;plugin;wrapper;editor;avalonia;cross-platform</PackageTags>
+    <Description>C# wrapper for the OwnVst3 native library to work with VST3 plugins. Includes cross-platform native editor support (Windows, macOS, Linux).</Description>
+    <PackageTags>vst;vst3;audio;plugin;wrapper;editor;native;cross-platform</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/ModernMube/OwnAudioVST3</RepositoryUrl>
     <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
-
-  <!-- Avalonia packages for cross-platform editor support -->
-  <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.3.11" />
-    <PackageReference Include="Avalonia.Desktop" Version="11.3.11" />
-    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.11" />
-    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.11" />
-  </ItemGroup>
 
   <ItemGroup>
     <None Include="README.md" Pack="true" PackagePath="\" />
