--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,10 @@ bld/
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
+.DS_Store
+.idea/
+Thumbs.db
+OwnVST3EditorDemo/.DS_Store
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
